@@ -1,5 +1,7 @@
 version 0.99.5 - xx-Nov-2010
 . [NEW] Particles: Added a new type kCCPositionTypeRelative. Useful for "trail" particles. Added Test.
+. [FIX] Menu: MenuItems can draw its children (issue #458)
+. [FIX] Menu: MenuItems positions can be controlled manually (issue #1013)
 . [FIX] Node: convertToAR method fixed (issue #1017)
 . [FIX] Node: vertexZ works OK in RetinaDisplay mode
 . [FIX] RenderTexture: removed unneeded and dangerous assert in getUIImageAsDataFromBuffer
